Remove "+" from slideId, which is an invalid DBus object path

BUG: 402970